# pydew_ascii

./: .env.example  .gitignore  .supercompact_log  CLAUDE.md  Makefile  README_ASCII.md  _run.bat  build_game.py  pyproject.toml  pytest.ini  requirements.txt  requirements_minimal.txt  run.bat  run.py  setup.py  test_cat_emoji.py  test_chat_ai.py  test_emoji_colorizer.py  test_quest_library.py  test_text_wrapping.py  test_ui_fixes.py
.claude/: settings.local.json
.claude/commands/: optimize.md  superCompact.md  update-repo.md
code/: LOG_PANEL_USAGE.md  __init__.py  ai_config_manager.py  ascii_renderer.py  ascii_soil.py  ascii_sprites.py  cat_info_ui.py  cat_npc.py  chat_ai.py  chat_panel.py  dialogue_ui.py  fish_system.py  font_manager.py  level.py  log_panel.py  main.py  menu.py  npc_system.py  overlay.py  player.py  quest_panel.py  settings.py  sky.py  test_claude_api.py
config/: ai_model_config.json  cat_events.json  cat_info.csv  map_config.json
data/Tilesets/: Grass.tsx
docs/: CAT_SPAWN_FIX_SUMMARY.md  COLLISION_FIX_SUMMARY.md  DEVELOPMENT_ROADMAP.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE_GUIDE.md  base_upgrade_system.md  cat_care_system.md  cat_events_design.md
scripts/: debug_cat_spawn_visualizer.py
src/: __init__.py  main.py  settings.py
src/ai/: __init__.py  ai_config_manager.py  cat_npc.py  chat_ai.py
src/core/: __init__.py  level.py  map_loader.py  player.py  support.py
src/data/: cat_data.py
src/rendering/: __init__.py  ascii_renderer.py  ascii_sprites.py  sprites.py
src/systems/: __init__.py  ascii_soil.py  bait_system.py  bait_workbench.py  cat_bed.py  cat_event_system.py  fish_system.py  npc_system.py  soil.py
src/ui/: __init__.py  bait_box_ui.py  cat_info_ui.py  catch_result_panel.py  chat_panel.py  dialogue_ui.py  event_notification.py  fishing_minigame.py  inventory_ui.py  log_panel.py  menu.py  overlay.py  quest_panel.py
src/utils/: __init__.py  emoji_colorizer.py  font_manager.py  sky.py  transition.py
test/: __init__.py  conftest.py  test_cat_collision.py  test_cat_emoji.py  test_cat_fishing.py  test_cat_spawn.py  test_catch_panel.py  test_chat_ai.py  test_doubao_basic.py  test_emoji_font.py  test_fishing_minigame.py  test_model_comparison.py  test_quest_library.py  test_text_wrapping.py  test_ui_fixes.py
test/integration/: __init__.py
test/manual/: __init__.py
test/unit/: __init__.py
